force-app/main/default/objects/Data_Load_Resume__c/Data_Load_Resume__c.object-meta.xml
<CustomObject>
    <description>Temporary Object to hold the resume files for one time mass load. The files are stored in S3 and are downloaded and attached to Candidate records</description>
    <label>Data Load Resume</label>
    <nameField>
        <label>Data Load Resume</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Load Resumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>