force-app/main/default/objects/Data_Load_Resume__c/fields/CandidateEmail__c.field-meta.xml
<CustomField>
    <fullName>CandidateEmail__c</fullName>
    <label>CandidateEmail</label>
    <type>Email</type>
</CustomField>