force-app/main/default/objects/Data_Load_Resume__c/fields/Content_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_ID__c</fullName>
    <description>Content ID for the created record</description>
    <inlineHelpText>Content ID for the created record</inlineHelpText>
    <label>Content ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>