force-app/main/default/objects/Data_Load_Resume__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>TR1__Closing_Report__c</fullName>
                <default>true</default>
                <label>TR1__Closing_Report__c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>