force-app/main/default/objects/Data_Load_Resume__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Capture Stack Trace or error details</description>
    <inlineHelpText>Capture Stack Trace or error details</inlineHelpText>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>