force-app/main/default/objects/Data_Load_Resume__c/fields/Exists__c.field-meta.xml
<CustomField>
    <fullName>Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact ID exists currently</description>
    <inlineHelpText>Contact ID exists currently</inlineHelpText>
    <label>Exists</label>
    <type>Checkbox</type>
</CustomField>