force-app/main/default/objects/Data_Load_Resume__c/fields/File_ID__c.field-meta.xml
<CustomField>
    <fullName>File_ID__c</fullName>
    <externalId>true</externalId>
    <label>File ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>