force-app/main/default/objects/Data_Load_Resume__c/fields/S3_File_Url__c.field-meta.xml
<CustomField>
    <fullName>S3_File_Url__c</fullName>
    <label>S3 File Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>