force-app/main/default/objects/Data_Load_Resume__c/fields/SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>SFDC_ID__c</fullName>
    <description>ID of the SFDC Record, which is associated with this file</description>
    <inlineHelpText>ID of the SFDC Record, which is associated with this file</inlineHelpText>
    <label>SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>