force-app/main/default/objects/Data_Load_Resume__c/fields/Source_BH_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_BH_ID__c</fullName>
    <description>Bullhorn ID in source system</description>
    <inlineHelpText>Bullhorn ID in source system</inlineHelpText>
    <label>Source BH ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>