force-app/main/default/objects/Data_Load_Resume__c/listViews/Account.listView-meta.xml
<ListView>
    <fullName>Account</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>S3_File_Url__c</columns>
    <columns>Date_Added__c</columns>
    <columns>Destination__c</columns>
    <columns>Error__c</columns>
    <columns>Exists__c</columns>
    <columns>File_ID__c</columns>
    <columns>RowNum__c</columns>
    <columns>Source_BH_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Destination__c</field>
        <operation>equals</operation>
        <value>Account</value>
    </filters>
    <label>Account</label>
    <language>en_US</language>
</ListView>