force-app/main/default/objects/Data_Load_Resume__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RowNum__c</columns>
    <columns>File_ID__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <columns>Candidate_ID__c</columns>
    <columns>CandidateEmail__c</columns>
    <columns>Date_Added__c</columns>
    <columns>Distribution__c</columns>
    <columns>S3_File_Url__c</columns>
    <columns>Exists__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>