force-app/main/default/objects/Data_Load_Resume__c/listViews/Exists.listView-meta.xml
<ListView>
    <fullName>Exists</fullName>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exists__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Exists</label>
</ListView>