force-app/main/default/objects/Data_Load_Resume__c/listViews/Processed.listView-meta.xml
<ListView>
    <fullName>Processed</fullName>
    <columns>Status__c</columns>
    <columns>Error__c</columns>
    <columns>Content_ID__c</columns>
    <columns>Source_BH_ID__c</columns>
    <columns>SFDC_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Processed</label>
    <language>en_US</language>
</ListView>