force-app/main/default/objects/Data_Load_Resume__c/listViews/Processed_Today.listView-meta.xml
<ListView>
    <fullName>Processed_Today</fullName>
    <columns>NAME</columns>
    <columns>Date_Added__c</columns>
    <columns>Destination__c</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Processed - Today</label>
    <language>en_US</language>
</ListView>